tests/negative/import_shadow.far
import math
import hash as math

fun main() -> i64 {
  return 0
}
